--- a/templates/back_end/visa_classic/categorie/doccuments_visa_classic_show.html.twig
+++ b/templates/back_end/visa_classic/categorie/doccuments_visa_classic_show.html.twig
@@ -1,14 +1,10 @@
 {% extends "back_end/base.html.twig" %}
 
-{% block menu_header %}
-    {% include "back_end/visa_classic/__header.html.twig" %}
-{% endblock %}
-
 
 {% block contenu %}
 
     <div class="row">
-        <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Gestion des documents (nécessaires et optionnels) - Visas classic / {{categorie.pays.titre}} /  {{ categorie.titre }}</h5>
+        <h5 class=" m-auto col-8"><i class="fa fa-users-cog"></i>Gestion des documents (nécessaires et optionnels) - Visas classic / {{categorie.visaClassic.pays.titre}} /  {{ categorie.titre }}</h5>
         <a href="{{path('show_pays_visa_classic')}}" class="btn btn-retour"><i class="fas fa-chevron-left"></i> Retour à la liste des pays </a>
     </div>
 
