--- a/templates/back_end/visa_classic/pays_visa_classic_edit.html.twig
+++ b/templates/back_end/visa_classic/pays_visa_classic_edit.html.twig
@@ -58,6 +58,12 @@
                         {{ form_widget(form.communique) }}
                     </div>
                 </div>
+                <div class="row form-group text-right">
+                    {{ form_label(form.instruction, null, {'label_attr' : {'class': 'col-sm-2 col-form-label'}}) }}
+                    <div class="input-group col-sm-10">
+                        {{ form_widget(form.instruction) }}
+                    </div>
+                </div>
                 </div>
                 <ul class="sticky-toolbar">
                     <li class="toolbar-items">
